# MiniCollisionCheker

./: CMakeLists.txt  Readme.md
include/Geometry/: capsule.hpp  collision.hpp  sphere.hpp
include/Robot/: RobotCollide.hpp  forwardkinematics.hpp  robot3D.hpp
src/: Robot3D.cpp  RobotCollide.cpp  collision.cpp  forwardkinematics.cpp  main.cpp
